@@ -396,7 +396,7 @@ BOOL TortoiseBlame::OpenFile(const TCHAR *fileName)
                     bUTF8 = false;
                     break;
                 }
-                if ((*utf8CheckBuf & 0xE0)==0xC0)
+                else if ((*utf8CheckBuf & 0xE0)==0xC0)
                 {
                     bUTF8 = true;
                     utf8CheckBuf++;
@@ -408,7 +408,7 @@ BOOL TortoiseBlame::OpenFile(const TCHAR *fileName)
                         break;
                     }
                 }
-                if ((*utf8CheckBuf & 0xF0)==0xE0)
+                else if ((*utf8CheckBuf & 0xF0)==0xE0)
                 {
                     bUTF8 = true;
                     utf8CheckBuf++;
@@ -428,7 +428,7 @@ BOOL TortoiseBlame::OpenFile(const TCHAR *fileName)
                         break;
                     }
                 }
-                if ((*utf8CheckBuf & 0xF8)==0xF0)
+                else if ((*utf8CheckBuf & 0xF8)==0xF0)
                 {
                     bUTF8 = true;
                     utf8CheckBuf++;
@@ -455,6 +455,11 @@ BOOL TortoiseBlame::OpenFile(const TCHAR *fileName)
                         bUTF8 = false;
                         break;
                     }
+                }
+                else if (*utf8CheckBuf >= 0x80)
+                {
+                    bUTF8 = false;
+                    break;
                 }
 
                 utf8CheckBuf++;
